crates/keron-lang/tests/corpus/errors/check/union_from_dynamic_string.keron
# A dynamic String never narrows into a closed union; the help lists
# the variants the slot accepts.
val fake: OsType = hostname()
